crates/core/tests/snapshots/analytics_standard__1_income_expenses_savings.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Январь | Февраль | Март | Апрель | Май | Июнь | Июль | Август | Сентябрь
tokens: month:2026-01 | month:2026-02 | month:2026-03 | month:2026-04 | month:2026-05 | month:2026-06 | month:2026-07 | month:2026-08 | month:2026-09
Доходы [metric.income]: 144000.00 139000.00 149000.00 143000.00 138000.00 160000.00 148000.00 146000.00 163000.00
Расходы [metric.expenses]: 107295.00 109103.00 111721.00 88095.00 93129.00 103748.00 110207.00 101766.00 99027.00
Сбережения [metric.savings]: 13739.08 12778.76 16382.22 15610.13 11901.30 24972.62 16669.19 14156.64 21249.51
