crates/core/tests/snapshots/analytics_standard__2_balance.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Январь | Февраль | Март | Апрель | Май | Июнь | Июль | Август | Сентябрь
tokens: month:2026-01 | month:2026-02 | month:2026-03 | month:2026-04 | month:2026-05 | month:2026-06 | month:2026-07 | month:2026-08 | month:2026-09
Остаток накопительно [metric.free_cum]: 22965.92 40084.16 60980.94 100275.81 133245.51 164524.89 185648.70 215726.06 258449.55
Сбережения накопительно [metric.savings_cum]: 13739.08 26517.84 42900.06 58510.19 70411.49 95384.11 112053.30 126209.94 147459.45
