crates/core/tests/snapshots/analytics_standard__3_by_status.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Январь | Февраль | Март | Апрель | Май | Июнь | Июль | Август | Сентябрь
tokens: month:2026-01 | month:2026-02 | month:2026-03 | month:2026-04 | month:2026-05 | month:2026-06 | month:2026-07 | month:2026-08 | month:2026-09
Оплачено [status.paid]: 111304.08 121881.76 116333.22 103705.13 101980.30 123250.62 122966.19 83922.64 88828.00
Долг [status.debt]: 9730.00 0.00 0.00 0.00 0.00 0.00 550.00 32000.00 0.00
Внеплановые [status.unplanned]: 0.00 0.00 11770.00 0.00 3050.00 5470.00 3360.00 0.00 0.00
План [status.planned]: 0.00 0.00 0.00 0.00 0.00 0.00 0.00 0.00 31448.51
totals: 121034.08 121881.76 128103.22 103705.13 105030.30 128720.62 126876.19 115922.64 120276.51
