crates/core/tests/snapshots/analytics_standard__4_by_kind.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Январь | Февраль | Март | Апрель | Май | Июнь | Июль | Август | Сентябрь
tokens: month:2026-01 | month:2026-02 | month:2026-03 | month:2026-04 | month:2026-05 | month:2026-06 | month:2026-07 | month:2026-08 | month:2026-09
Обязательные [kind.mandatory]: 69497.00 69390.00 64592.00 60670.00 65337.00 64285.00 71490.00 65344.00 63819.00
Желания [kind.wants]: 32798.00 34713.00 47129.00 27425.00 27792.00 34463.00 38717.00 36422.00 35208.00
Сбережения [kind.savings]: 13739.08 12778.76 16382.22 15610.13 11901.30 24972.62 16669.19 14156.64 21249.51
Займы [kind.loans]: 5000.00 5000.00 0.00 0.00 0.00 5000.00 0.00 0.00 0.00
totals: 121034.08 121881.76 128103.22 103705.13 105030.30 128720.62 126876.19 115922.64 120276.51
