crates/core/tests/snapshots/analytics_standard__5_by_category.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Жильё и связь | Продукты | Кредиты и долги | Одежда | Дом и техника | Маркетплейсы | Красота | Кафе и доставка | Спорт | Здоровье | Транспорт | Подарки и праздники | Хобби и игры | Займы другим | Подписки | Прочее
tokens: category:2 | category:1 | category:5 | category:7 | category:11 | category:13 | category:8 | category:6 | category:9 | category:4 | category:3 | category:14 | category:10 | category:16 | category:12 | category:15
Расходы [metric.expenses]: 299700.00 162480.00 87700.00 57650.00 57270.00 43710.00 37810.00 35811.00 31500.00 25360.00 19184.00 18780.00 18160.00 15000.00 9873.00 4103.00
totals: 299700.00 162480.00 87700.00 57650.00 57270.00 43710.00 37810.00 35811.00 31500.00 25360.00 19184.00 18780.00 18160.00 15000.00 9873.00 4103.00
