crates/core/tests/snapshots/analytics_standard__7_large_categories.snap
---
source: crates/core/tests/analytics_standard.rs
expression: text(&c)
---
unit: Rub
categories: Январь | Февраль | Март | Апрель | Май | Июнь | Июль | Август | Сентябрь
tokens: month:2026-01 | month:2026-02 | month:2026-03 | month:2026-04 | month:2026-05 | month:2026-06 | month:2026-07 | month:2026-08 | month:2026-09
Продукты [category:1]: 18990.00 23320.00 11890.00 15330.00 17530.00 19540.00 23160.00 15880.00 16840.00
Одежда [category:7]: 11050.00 8940.00 7310.00 6280.00 0.00 5630.00 6240.00 5740.00 6460.00
totals: 30040.00 32260.00 19200.00 21610.00 17530.00 25170.00 29400.00 21620.00 23300.00
